--- a/AngularAuthAPI/appsettings.json
+++ b/AngularAuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServerConnStr": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog = AuthAPIDb; Integrated Security = true;"
+  },
+  "EmailSetting": {
+    "From": "correosrestablecer@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "port": "465",
+    "Username": "correosrestablecer@gmail.com",
+    "Password": "CorreosRestablecer_.Cr"
   }
 }
