--- a/AngularAuthAPI/appsettings.json
+++ b/AngularAuthAPI/appsettings.json
@@ -9,11 +9,11 @@
   "ConnectionStrings": {
     "SqlServerConnStr": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog = AuthAPIDb; Integrated Security = true;"
   },
-  "EmailSetting": {
+  "EmailSettings": {
     "From": "correosrestablecer@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "port": "465",
     "Username": "correosrestablecer@gmail.com",
-    "Password": "CorreosRestablecer_.Cr"
+    "Password": "uskmfosthrrbhgfr"
   }
 }
